--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -254,12 +254,12 @@ footer img{
         display: block;
     }
 }
-@media(max-width: 667px) and (min-width:387px) {
+@media(max-width: 667px) and (min-width:435px) {
     .title-store {
         font-size: 30px;
     }
     .anuncio-box{
-        margin: 30px 0;
+        margin: 30px 10px;
         padding: 10px;
         width: 150px;
         border: 2px solid;
@@ -318,9 +318,9 @@ footer img{
         text-align: center;
     }
 }
-@media(max-width: 387px) {
+@media(max-width: 435px) {
     .anuncio-box{
-        margin: 30px 0;
+        margin: 30px 5px;
         padding: 10px;
         width: 100px;
         border: 2px solid;
