--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -3,6 +3,9 @@ body {
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     color: #1c1c1c;
+    background-image: url('../img/fundo-body.png');
+    background-position: center;
+    background-size: cover;
 }
 .fundo {
     position: absolute;
@@ -169,19 +172,26 @@ header .container {
 .anuncio-box h1{
     padding: 5px;
     font-size: 1.3rem;
+    margin-bottm: 5px;
 }
 .anuncio-box h2 {
-    font-weight: 600 !important;
+    font-weight: 500 !important;
+    color: rgb(255, 81, 0);
 }
 .anuncio-box h3{
     margin-top: 5px;
     padding: 0;
     font-weight: 500;
 }
+.anuncio-box h4{
+    text-decoration: line-through;
+    text-align: center;
+    color: rgb(255, 28, 28);
+}
 .see-more {
+    font-family: 'Montserrat', sans-serif;
     color: #1c1c1c;
     margin-top: 10px;
-    width: 60%;
     height: auto;
     font-family: Montserrat;
     font-weight: 500;
@@ -190,12 +200,13 @@ header .container {
     outline: 0;
     background: rgb(255,238,74);
     background: linear-gradient(90deg, rgb(255, 235, 56) 0%, rgb(253, 55, 55) 100%);
-    padding: 5px 10px;
+    padding: 5px 30px;
     transition-duration: 0.5s;
     border-radius: 50px;
 }
 .see-more:hover {
-    width: 100%;
+    transform: scale(1.1);
+    padding: 5px 40px;
 }
 /* RODPÉ */
 footer {
@@ -342,7 +353,7 @@ footer img{
     }
     .see-more {
         font-size: 0.8rem;
-        width: 100%;
+        padding: 5px 15px;
     }
     .title-store{
         font-size: 30px;
