--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -297,6 +297,10 @@ footer img{
         font-size: 0.8rem;
         width: 100%;
     }
+    .see-more:hover {
+        transform: scale(1.1);
+        padding: 5px 30px;
+    }
     footer {
         display: flex;
         justify-content: center;
@@ -357,6 +361,10 @@ footer img{
     }
     .see-more {
         font-size: 0.8rem;
+        padding: 5px 15px;
+    }
+    .see-more:hover {
+        transform: scale(1.1);
         padding: 5px 15px;
     }
     .title-store{
