--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -144,6 +144,9 @@ header .container {
     display: flex;
 }
 .select {
+    -webkit-appearance: none;  /* Remove estilo padrão do Chrome */
+   -moz-appearance: none; /* Remove estilo padrão do FireFox */
+   appearance: none; /* Remove estilo padrão do FireFox*/
     font-family: 'Montserrat', sans-serif;
     padding: 2px;
     outline: 0;
