--- a/assets/css/styleCadastro.css
+++ b/assets/css/styleCadastro.css
@@ -30,13 +30,27 @@
     background-color: white;
 }
 @media(max-width: 500px) {
+    .alert {
+        margin-top: -20px;
+        font-size: 15px;
+        text-align: center;
+        max-width: 340px;
+    }
     .login-box h1 {
         font-size: 30px;
         text-align: center;
+        margin-bottom: 20px;
     }
 }
 @media(max-width: 375px) {
+    .alert {
+        font-size: 14px;
+        max-width: 240px;
+        margin-top: -23px;
+    }
     .login-box h1 {
+
+        margin-bottom: 20px;
         font-size: 25px;
         text-align: center;
     }
