--- a/assets/css/styleLogin.css
+++ b/assets/css/styleLogin.css
@@ -41,7 +41,7 @@ body{
 }
 .login-box label{
     margin-top: 15px;
-    margin-bottom: -5px;
+    margin-bottom: -2px;
     margin-left: 5px;
     font-weight: 400;
     font-size: 15px;
@@ -73,7 +73,8 @@ body{
     font-size: 20px;
     border: none;
     outline: 0;
-    background: rgb(255, 205, 40);
+    background: rgb(255,238,74);
+    background: linear-gradient(90deg, rgba(255,238,74,1) 0%, rgb(255, 115, 1) 100%);
     padding: 5px 30px;
     transition-duration: 0.5s;
     border-radius: 50px;
