--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,6 +1,93 @@
 html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important; /*pode ser transparent também*/
 }
+header {
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  z-index: 888888;
+  width: 100%;
+  top: 0;
+  height: 80px;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+  border-bottom: 1px solid #949494;
+  background-color: var(--white-background-color);
+}
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu {
+  font-family: var(--font-family);
+  height: 100%;
+}
+nav {
+  height: 100%;
+}
+.logo a{
+  font-size: 25px;
+  font-weight: 600;
+  text-decoration: none;
+  color: var(--color-texts);
+}
+.menu a {
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.menu ul{
+  list-style: none;
+  display: flex;
+  height: 100%;
+  margin: 0;
+}
+.menu li{
+  color: var(--color-texts);
+  font-size: 16px;
+  font-weight: 500;
+  transition: 0.5s;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+.menuMobile {
+  display: none;
+  width: auto;
+  height: auto;
+  margin-right: 20px;
+  margin-top: 12px;
+  margin-bottom: 8px;
+}
+.bar {
+  width: 100%;
+  height: 2px;
+  background-color: var(--background-color);
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: 0.2s;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  
+}
+.menu a:hover .bar{
+  transform: translateX(0);
+  background: var(--orange-color);
+  z-index: 20;
+  opacity: 1;
+}
+.menu a:hover li{
+  color: var(--orange-color);
+}
+
 .modalMenu {
   top: 0;
   left: 0;
@@ -28,7 +115,7 @@ html {
   margin: 15px;
   padding: 0 10px;
   font-size: 23px;
-  color: #1c1c1c;
+  color: var(--color-texts);
   border-bottom: 1px solid #ffa60081;
   transition: 0.5s;
 }
@@ -40,7 +127,7 @@ html {
   position: absolute;
   top: 30px;
   left: 30px;
-  color: #1c1c1c !important;
+  color: var(--color-texts);
   font-size: 25px;
   font-weight: 400;
   background-color: white;
