--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -1,15 +1,21 @@
 html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /*pode ser transparent também*/
+    height: 100%;
 }
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    color: #1c1c1c;
-    background-image: url('../img/fundo-body.jpeg');
+    font-family: var(--font-family);
+    color: var(--color-texts) !important;
+    background-color: var(--background-color) !important;
+    transition: .2s ;
+    /* background-image: url('../img/fundo-body.jpeg');
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
+    /* background: rgb(218,114,66);
+background: linear-gradient(180deg, rgba(218,114,66,1) 0%, rgba(149,111,64,1) 100%); */
 }
+
 .dev{
     color: white !important;
     cursor: pointer;
@@ -77,214 +83,336 @@ p {
 
 
 
-/* CABEÇALHO */
-header {
-    display: flex;
-    justify-content: center;
-    height: 100px;
-}
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-/* NAV BAR */
-.menu {
-    font-family: 'Montserrat', sans-serif;
-}
-.menu a {
-    text-decoration: none;
-}
-.menu ul{
-    list-style: none;
-    display: flex;
-}
-.menu li{
-    margin-left: 20px;
-    color: white;
-    font-size: 20px;
-    font-weight: 500;
-    transition: 0.5s;
-}
-.menu li:hover{
-    transform: scale(1.1);
-}
-.menuMobile {
-	display: none;
-	width: auto;
-	height: auto;
-    margin-right: 20px;
-    margin-top: 12px;
-    margin-bottom: 8px;
-}
+
 
 /* STORE */
 #store {
     display: flex;
     justify-content: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--font-family);
+    position: relative;
+    padding-bottom: 200px;
 }
 #store .container {
-    background-color: rgb(255, 255, 255);
-}
-.title-home {
-    position: relative;
-    top: -2.5em;
-    margin-bottom: -30px;
-    color: #1c1c1c;
-}
-.title-store {
-    background-color: white;
-    padding: 5px 15px;
-    font-size: 40px;
-    font-weight: 500;
+    background-color: var(--background-color);
 }
 .filter {
+    height: 30px;
+    width: 100%;
     display: flex;
-}
-.filter h6{
-    font-size: 20px;
-    font-weight: 500;
+    justify-content: space-between;
 }
 .filter form{
     display: flex;
+    height: 100%;
+}
+.filter a{
+    text-decoration: none;
+}
+.filter-buttons-group{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.filter-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    border: 1px solid var(--color-texts);
+    border-radius: 3px;
+    padding: 3px 10px;
+    margin-right: 10px;
+    transition: .2s;
+    color: var(--color-texts);
+    background-color: var(--anuncio-background-color);
+}
+.filter-button:hover {
+    background-color: var(--color-texts);
+    color: var(--color-texts-on-hover);
+}
+.btn-check:active+.btn-outline-dark:focus, .btn-check:checked+.btn-outline-dark:focus, .btn-outline-dark.active:focus, .btn-outline-dark.dropdown-toggle.show:focus, .btn-outline-dark:active:focus, .btn-check:focus+.btn-outline-dark, .btn-outline-dark:focus {
+    box-shadow: none !important;
+}
+.submit-button-filter {
+    display: none;
+}
+.inputs-form-filter{
+    display: none;
+}
+.dropdown-item-title{
+    font-weight: 500 !important;
+}
+.dropdown-line{
+    width: 100%;
+    padding: 5px 15px;
+}
+.dropdown-line-item{
+    display: flex;
+}
+.dropdown-line-item span{
+    margin-left: 10px;
+    color: var(--color-texts);
+}
+.dropdown-line-item input{
+    cursor: pointer;
 }
 .limparButton {
     width: min-content;
-    height: 24px;
-    margin-left: 10px;
-    border: 0;
-    border-radius: 1px;
-
-    font-family: 'Montserrat';
+    height: 100%;
+    margin-right: 10px;
+    font-family: var(--font-family);
     cursor: pointer;
-    transition: 0.3s;
+    transition: 0.2s;
     outline: 0;
     background-color: rgb(0, 204, 255, 0);
-    border: 1px solid #1c1c1c;
+    border: 1px solid var(--color-texts);
+    color: var(--color-texts);
+    padding: 0 10px;
+    font-size: 15px;
 }
 .limparButton:hover{
-    background-color: rgba(255, 192, 97, 0.829);
-}
-.filtrar{
-    background-color: rgb(255, 182, 73);
-    border: 0px solid #1c1c1c;
+    background-color: var(--color-texts);
+    color: var(--color-texts-on-hover);
 }
 .select {
-    font-family: 'Montserrat', sans-serif;
-    padding: 2px;
+    font-family: var(--font-family);
+    color: var(--color-texts);
+    padding: 0 5px;
+    font-size: 15px;
     outline: 0;
-    margin-left: 10px;
-    background-color: white !important;
-    border: 1px solid #949494;
+    margin-right: 10px;
+    background-color: var(--background-color) !important;
+    border: 1px solid var(--color-texts);
 }
 .products-box {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    justify-content:center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 20px 0;
+    background-color: var(--background-color);
 }
 .anuncio-box {
-    margin: 20px;
     padding: 10px;
-    width: 250px;
-    border: 2px solid;
+    /* border: 2px solid;
     border-image-source: linear-gradient(45deg, rgb(255, 102, 0), rgb(255, 230, 0));
-    border-image-slice: 1;
+    border-image-slice: 1; */
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+    border: 1px solid white;
     display: flex;
     flex-direction: column;
+    align-items: center;
     position: relative;
+    font-size: 16px;
+    border-radius: 5px;
+    background-color: var(--anuncio-background-color);
+}
+.anuncio-box a{
+    text-decoration: none;
 }
 .anuncio-box img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
+    margin-bottom: 5px;
+    overflow: hidden;
 }
 .anuncio-box h1{
     padding: 5px;
-    font-size: 1.3rem;
-    font-weight: 500;
-
+    font-size: 1.1em;
+    font-weight: 600;
+    color: var(--color-texts);
 }
 .anuncio-box h2 {
-    font-weight: 400 !important;
-    color: rgb(255, 81, 0);
+    font-weight: 400;
+    color: var(--price-color);
+    font-size: 1.2em;
 }
 .anuncio-box h3{
     margin-top: 8px;
     padding: 0;
     font-weight: 500;
+    font-size: 1em;
 }
 .anuncio-box h4{
     text-decoration: line-through;
     text-align: center;
-    color: rgb(255, 28, 28);
-    font-weight: 300;
+    color: var(--offer-color);
+    font-weight: 400;
+    font-size: 1em;
+}
+.anuncio-plataforma{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    height: min-content;
+    margin: 0 !important;
+    font-weight: 600;
+    color: var(--orange-color);
 }
 .see-more {
-    font-family: 'Montserrat', sans-serif;
-    color: #1c1c1c;
+    font-family: var(--font-family);
+    color: var(--color-texts);
     margin-top: 10px;
-    height: auto;
-    font-family: Montserrat;
+    margin-bottom: 30px;
     font-weight: 500;
-    font-size: 20px;
-    border: none;
+    font-size: 1em;
     outline: 0;
-    background: rgb(255,238,74);
-    background: linear-gradient(90deg, rgb(255, 235, 56) 0%, rgb(253, 55, 55) 100%);
+    border: 1px solid var(--color-texts);
+    border-radius: 5px;
     padding: 5px 30px;
-    transition-duration: 0.5s;
-    border-radius: 50px;
+    transition-duration: 0.2s;
     cursor: pointer;
 }
 .see-more:hover {
-    transform: scale(1.1);
-    padding: 5px 40px;
+    background: var(--color-texts);
+    color: var(--color-texts-on-hover);
 }
 .alertaAnuncio{
-    color: #1c1c1c;
+    color: var(--color-texts);
     font-weight: 400 !important;
     margin-top: 30px;
     margin-bottom: 50px;
 }
-/* RODPÉ */
-footer {
+.without-anuncios{
+    width: 100%;
+    height: 200px;
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
-    color: white;
-    background-color: #1c1c1c;
+    font-size: 20px;
+    color: var(--offer-color);
+}
+.pagination-inputs-box{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.pagination-inputs-box a{
+    text-decoration: none;
+}
+.pagination-inputs{
+    display: flex;
+    height: 100%;
+    outline: none;
+}
+.pagination-button{
+    height: 100%;
+    border: 0;
+    background-color: var(--white-background-color);
+    padding: 0 15px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    transition: .2s;
+    color: var(--color-texts);
+}
+.pagination-button:hover{
+    background-color: var(--color-texts);
+    color: var(--color-texts-on-hover);
+}
+.pagination-button-right{
+    border-radius: 0 3px 3px 0;
+    border-top: 1px solid var(--color-texts);
+    border-right: 1px solid var(--color-texts);
+    border-bottom: 1px solid var(--color-texts);
+}
+.pagination-button-left{
+    border-radius: 3px 0 0 3px;
+    border-top: 1px solid var(--color-texts);
+    border-left: 1px solid var(--color-texts);
+    border-bottom: 1px solid var(--color-texts);
+    border-right: 1px solid var(--color-texts);
+}
+.pagination-button-left-disabled{
+    border-top: 1px solid #b0b0b0;
+    border-left: 1px solid #b0b0b0;
+    border-bottom: 1px solid #b0b0b0;
+    color: #b0b0b0;
+    cursor: default;
+}
+.pagination-button-right-disabled{
+    border-top: 1px solid #b0b0b0;
+    border-right: 1px solid #b0b0b0;
+    border-bottom: 1px solid #b0b0b0;
+    color: #b0b0b0;
+    cursor: default;
+}
+.pagination-button-left-disabled:hover, .pagination-button-right-disabled:hover{
+    background-color: var(--white-background-color);
+    color: #b0b0b0;
+}
+/* RODPÉ */
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #272727;
+    border-top: 1px solid #949494;
+    font-family: var(--font-family);
+    font-size: 15px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 footer .container{
-    display: flex;
-    flex-direction: column;
-}
-footer h1{
-    margin-top: 20px;
-    font-size: 30px !important;
+    display: grid;
+    height: 200px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 80% 20%;
+    grid-template-areas:
+        "left right"
+        "bottom .";
+    background-color: #272727 !important;
 }
 footer h3{
+    font-size: 1.2em;
+    color: #efefef;
+}
+footer h5{
+    font-size: 1em;
     font-weight: 400;
-    font-size: 18px !important;
+    color: #bebebe;
 }
-footer img{
-    margin: 10px;
-    width: 30px;
+footer a{
+    color: #bebebe;
+    transition: .2s;
 }
-.credits {
-    padding: 10px 20px !important;
-    border-top: 1px solid;
+footer a:hover{
+    color: #e2e2e2;
+}
+.footer-left{
+    grid-area: left;
+    grid-column: 1/2;
     display: flex;
-    flex-direction: row !important;
-    justify-content: space-between;
-
+    flex-direction: column;
+    justify-content: center;
 }
-.credits h4{
-    font-weight: 400;
-    font-size: 16px !important;
+.footer-right{
+    grid-area: right;
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer-bottom{
+    grid-area: bottom;
+    grid-column: 1/3;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #bebebe;
+    border-top: 1px solid #3e3e3e;
+}
+.footer-bottom h6{
+    font-size: 0.9em;
+    font-weight: 300;
+    margin: 0;
 }
 /* SLIDE */
 .slideshow {
@@ -354,25 +482,46 @@ footer img{
     margin-left: 10px;
     border: 0;
     border-radius: 1px;
-    font-family: 'Montserrat' !important;
-    background-color: rgb(255, 182, 73);
+    font-family: var(--font-family);
+    background-color: var(--orange-color);
     outline: 0;
     transition: 0.3s;
     display: none;
 }
 .abrirFiltros:hover{
     background-color: rgba(255, 192, 97, 0.829);
+    color: var(--color-texts-on-hover);
 }
 .cancelModal{
     padding:  5px 10px;
     margin-top: 10px;
     border: 0;
     border-radius: 2px;
-    font-family: 'Montserrat' !important;
-    background-color: rgb(230, 19, 71);
+    font-family: var(--font-family);
+    background-color: var(--orange-color);
     color: white;
     outline: 0;
     transition: 0.3s;
+}
+.form-check {
+    display: flex !important;
+    padding: 0 !important;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    background-color: rgb(red, green, blue, 0);
+    font-family: var(--font-family) !important;
+    margin: 0 !important;
+}
+.form-check input {
+    width: 40px !important;
+    height: 20px !important;
+    margin: 0 !important;
+}
+.form-check label {
+    font-size: 18px;
+    margin-right: 10px;
+    font-weight: 500;
 }
 @media (max-width: 768px){
     .menu ul {
@@ -465,29 +614,6 @@ footer img{
     .see-more:hover {
         transform: scale(1.1);
         padding: 5px 30px;
-    }
-    footer {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        color: white;
-        background-color: #1c1c1c;
-    }
-    footer .container{
-        display: flex;
-        flex-direction: column;
-    }
-    footer h1{
-        margin-top: 20px;
-        font-size: 25px;
-    }
-    footer h3{
-        font-weight: 400;
-    }
-    footer img{
-        margin: 5px;
-        width: 30px;
     }
     .credits {
         margin-top: 10px;
