--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -189,13 +189,13 @@ p {
 }
 .products-box {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
     margin: 20px 0;
     background-color: var(--background-color);
 }
 .anuncio-box {
-    padding: 10px;
+    padding: 35px 10px 10px 10px;
     /* border: 2px solid;
     border-image-source: linear-gradient(45deg, rgb(255, 102, 0), rgb(255, 230, 0));
     border-image-slice: 1; */
@@ -208,7 +208,7 @@ p {
     align-items: center;
     position: relative;
     font-size: 16px;
-    border-radius: 5px;
+    border-radius: 3px;
     background-color: var(--anuncio-background-color);
 }
 .anuncio-box a{
@@ -225,17 +225,21 @@ p {
     font-size: 1.1em;
     font-weight: 600;
     color: var(--color-texts);
+    margin-bottom: 5px;
 }
 .anuncio-box h2 {
     font-weight: 400;
     color: var(--price-color);
     font-size: 1.2em;
+    margin: 0;
 }
 .anuncio-box h3{
     margin-top: 8px;
     padding: 0;
     font-weight: 500;
     font-size: 1em;
+    margin: 0;
+    color: var(--color-texts);
 }
 .anuncio-box h4{
     text-decoration: line-through;
@@ -243,21 +247,32 @@ p {
     color: var(--offer-color);
     font-weight: 400;
     font-size: 1em;
+    margin-bottom: 3px;
 }
 .anuncio-plataforma{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    top: 5px;
+    right: 0;
+    padding: 0 10px;
     height: min-content;
     margin: 0 !important;
     font-weight: 600;
-    color: var(--orange-color);
+    color: var(--color-texts);
 }
+/* .highlight-conta {
+    color: #36c0c9;
+} 
+.highlight-upgrade {
+    color: var(--orange-color);
+} */
 .see-more {
     font-family: var(--font-family);
     color: var(--color-texts);
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-weight: 500;
     font-size: 1em;
     outline: 0;
@@ -588,7 +603,7 @@ footer a:hover{
     }
     .anuncio-box{
         margin: 30px 10px;
-        padding: 10px;
+        padding: 20px 10px 10px 10px;
         width: 150px;
         border: 2px solid;
         border-image-source: linear-gradient(45deg, rgb(255, 102, 0), rgb(255, 230, 0));
