--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -140,7 +140,7 @@ p {
     display: none;
 }
 .inputs-form-filter{
-    display: none;
+    display: block;
 }
 .dropdown-item-title{
     font-weight: 500 !important;
