Ending the day, changing some styles

--- a/assets/css/variaveis-globais.css
+++ b/assets/css/variaveis-globais.css
@@ -7,7 +7,8 @@
     --background-color: #ebebeb;
     --white-background-color: white;
     --offer-color: #f5260f;
-    --anuncio-background-color: white;
+    --softdark-background-color: white;
     --label-filter-bgcolor: #dbdbdb;
     --filtrar-button-on-hover: #ff7c1f;
+    --cor-border-to-darkmode: #3b3b3b;
 }
