--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -13,8 +13,10 @@ header {
   box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
   -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-  border-bottom: 1px solid #949494;
-  background-color: var(--white-background-color);
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: var(--cor-border-to-darkmode);
+  background-color: var(--softdark-background-color);
 }
 header .container {
   display: grid;
