--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -122,7 +122,7 @@ p {
     margin-right: 10px;
     transition: .2s;
     color: var(--color-texts);
-    background-color: var(--anuncio-background-color);
+    background-color: var(--softdark-background-color);
 }
 .button-dropdown {
     color: var(--orange-color);
@@ -215,14 +215,14 @@ p {
     box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-    border: 1px solid white;
+    border: 1px solid var(--cor-border-to-darkmode);
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     font-size: 16px;
     border-radius: 3px;
-    background-color: var(--anuncio-background-color);
+    background-color: var(--softdark-background-color);
 }
 .anuncio-box a{
     text-decoration: none;
