--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -10,20 +10,6 @@ body {
     background-color: var(--background-color) !important;
     transition: .2s ;
 }
-
-.dev{
-    color: white !important;
-    cursor: pointer;
-}
-.fundo {
-    position: absolute;
-    background-image: url('../img/fundo.png');
-    background-size: cover;
-    background-position: center;
-    height: 600px;
-    width: 100%;
-    z-index: -1;
-}
 .container {
     width: 100%;
     max-width: 1100px;
@@ -73,13 +59,6 @@ p {
     font-weight: 500;
 }
 
-
-
-
-
-
-
-
 /* STORE */
 #store {
     display: flex;
@@ -124,6 +103,13 @@ p {
     color: var(--color-texts);
     background-color: var(--softdark-background-color);
 }
+.dropdown-menu {
+    background-color: var(--softdark-background-color) !important;
+    border: 1px solid var(--color-border-to-darkmode) !important;
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+}
 .button-dropdown {
     color: var(--orange-color);
     border: 1px solid var(--orange-color);
@@ -161,7 +147,7 @@ p {
     user-select: none;
     transition: .2s;
 }
-.dropdown-menu label:hover {
+.label-with-hover-function:hover {
     background-color: var(--label-filter-bgcolor);
 }
 .dropdown-line-item span{
@@ -205,6 +191,7 @@ p {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 20px;
     margin: 20px 0;
+    margin-bottom: 30px;
     background-color: var(--background-color);
 }
 .anuncio-box {
@@ -215,14 +202,21 @@ p {
     box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-    border: 1px solid var(--cor-border-to-darkmode);
+    border: 1px solid var(--color-border-to-darkmode);
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     font-size: 16px;
-    border-radius: 3px;
+    border-radius: 5px;
     background-color: var(--softdark-background-color);
+    transition: .2s;
+}
+.anuncio-box:hover {
+    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.5);
+    border: 1px solid #ababab;
 }
 .anuncio-box a{
     text-decoration: none;
@@ -320,10 +314,26 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    font-size: 16px;
 }
 .pagination-inputs-box a{
     text-decoration: none;
+}
+.box-between-pagination-buttons {
+    width: auto;
+    height: 100%;
+    padding: 0 6px;
+    color: var(--color-texts);
+    border: 1px solid var(--color-texts);
+    background-color: var(--softdark-background-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box-between-pagination-buttons span{
+    margin: 0 4px;
+    font-weight: 500;
 }
 .pagination-inputs{
     display: flex;
@@ -333,7 +343,7 @@ p {
 .pagination-button{
     height: 100%;
     border: 0;
-    background-color: var(--white-background-color);
+    background-color: var(--softdark-background-color);
     padding: 0 15px;
     font-family: var(--font-family);
     font-weight: 500;
@@ -345,7 +355,7 @@ p {
     color: var(--color-texts-on-hover);
 }
 .pagination-button-right{
-    border-radius: 0 3px 3px 0;
+    border-radius: 0 5px 5px 0;
     border-top: 1px solid var(--color-texts);
     border-right: 1px solid var(--color-texts);
     border-bottom: 1px solid var(--color-texts);
@@ -355,7 +365,6 @@ p {
     border-top: 1px solid var(--color-texts);
     border-left: 1px solid var(--color-texts);
     border-bottom: 1px solid var(--color-texts);
-    border-right: 1px solid var(--color-texts);
 }
 .pagination-button-left-disabled{
     border-top: 1px solid #b0b0b0;
@@ -372,7 +381,7 @@ p {
     cursor: default;
 }
 .pagination-button-left-disabled:hover, .pagination-button-right-disabled:hover{
-    background-color: var(--white-background-color);
+    background-color: var(--softdark-background-color);
     color: #b0b0b0;
 }
 /* RODPÉ */
@@ -442,158 +451,12 @@ footer a:hover{
     font-weight: 300;
     margin: 0;
 }
-/* SLIDE */
-.slideshow {
-	overflow:hidden;
-    margin-bottom:50px;
-    margin-top: 20px;
-}
-.slarea {
-	width: 100000px;
-	background-color: rgb(255, 255, 255);
-	transition: all 1s;
-}
-.slide {
-    max-height: 335px;
-    height: 300px;
-	float: left;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-}
-.slidebolinhas {
-	position: absolute;
-	width: 200px;
-	height: 20px;
-}
-.bolinha {
-	width: 16px;
-	height: 16px;
-	float: left;
-	margin-top: 5px;
-	margin-right: 5px;
-	margin-left: 5px;
-	cursor: pointer;
-	background-color: #ff9823;
-	border-radius: 8px;
-}
-/* MODAL FILTRO */
-.filtroPopUp{
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(255, 255, 255, 0.9);
-    position: fixed;
-    display: none;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    z-index: 400;
-}
-
-.modalFiltro{
-    display: flex !important;
-    animation-name: modalFade;
-    animation-duration: 0.3s;
-}
-@keyframes modalFade{
-    from{
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-.abrirFiltros {
-    padding:  5px 10px;
-    margin-left: 10px;
-    border: 0;
-    border-radius: 1px;
-    font-family: var(--font-family);
-    background-color: var(--orange-color);
-    outline: 0;
-    transition: 0.3s;
-    display: none;
-}
-.abrirFiltros:hover{
-    background-color: rgba(255, 192, 97, 0.829);
-    color: var(--color-texts-on-hover);
-}
-.cancelModal{
-    padding:  5px 10px;
-    margin-top: 10px;
-    border: 0;
-    border-radius: 2px;
-    font-family: var(--font-family);
-    background-color: var(--orange-color);
-    color: white;
-    outline: 0;
-    transition: 0.3s;
-}
-
-@media (max-width: 768px){
-    .menu ul {
-        color: black !important;
-        flex-direction: column;
-        position: absolute;
-        right: 0;
-        margin-top: 0;
-        margin-left: 0;
-        text-align: right;
-        padding-right: 20px;
-        padding-bottom: 5px;
-        border-radius: 0 0 0 10px;
-        display: none;
-    }
-    .menu li {
-        font-size: 20px;
-        padding: 0 20px 12px 10px;
-    }
-    header {
-        height: auto;
-    }
-    .menuMobile {
-        display: block;
-    }
-    .space-100{
-        height: 130px;
-    }
-    .slide{
-        height: 200px;
-    }
-    .slarea{
-        height: 200px;
-    }
-    .slideshow{
-        height: 200px;
-    }
-}
 @media(max-width: 667px) and (min-width:435px) {
-    .filter{
-        display: none;
-    }
-    .abrirFiltros{
-        display: block;
-    }
-    .formFiltros{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .select{
-        margin-left: 0;
-        width: 100%;
-        margin: 5px;
-    }
     .limparButton{
         margin-top: 5px;
         margin-left: 0;
         height: min-content;
         padding: 5px 10px;
-    }
-    .title-store {
-        font-size: 30px;
     }
     .anuncio-box{
         margin: 30px 10px;
@@ -639,26 +502,8 @@ footer a:hover{
         text-align: center;
     }
 
-    .slideshow{
-        display: none !important;
-    }
-
 }
 @media(max-width: 435px) {
-    .slideshow{
-        display: none !important;
-    }
-    .filter{
-        display: none;
-    }
-    .abrirFiltros{
-        display: block;
-    }
-    .formFiltros{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
     .select{
         margin-left: 0;
         width: 100%;
@@ -699,9 +544,6 @@ footer a:hover{
         transform: scale(1.1);
         padding: 5px 15px;
     }
-    .title-store{
-        font-size: 30px;
-    }
     footer {
         display: flex;
         justify-content: center;
@@ -726,42 +568,4 @@ footer a:hover{
         margin: 5px;
         width: 25px;
     }
-    .credits {
-        margin-top: 10px;
-        padding: 10px 20px;
-        border-top: 1px solid;
-        display: flex;
-        flex-direction: row !important;
-        justify-content: space-between;
-
-    }
-    .credits h4{
-        font-weight: 400;
-        font-size: 13px !important;
-        text-align: center;
-    }
-    .slide{
-        height: 120px;
-    }
-    .slarea{
-        height: 120px;
-    }
-    .slideshow{
-        height: 120px;
-    }
-}
-@media (max-width: 365px) {
-    
-    .filter {
-        width: 100%;
-    }
-    .filter form {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-    }
-    .select {
-        margin: 5px;
-    }
-
 }
