--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -13,7 +13,7 @@ header {
   box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
   -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
-  border-bottom-width: 1px;
+  border-bottom-width: 0;
   border-bottom-style: solid;
   border-bottom-color: var(--color-border-to-darkmode);
   background-color: var(--softdark-background-color);
