--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -13,6 +13,7 @@ header {
   box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
   -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+  font-size: 16px;
   border-bottom-width: 0;
   border-bottom-style: solid;
   border-bottom-color: var(--color-border-to-darkmode);
@@ -43,34 +44,9 @@ header .logo {
 nav {
   height: 100%;
 }
-.form-check {
-  display: flex !important;
-  padding: 0 !important;
-  justify-content: flex-end;
-  align-items: center;
-  height: 100%;
-  background-color: rgb(red, green, blue, 0);
-  font-family: var(--font-family) !important;
-  margin: 0 !important;
-  grid-column: 3/4;
-  grid-area: darkmode;
-}
-.form-check input {
-  width: 40px !important;
-  height: 20px !important;
-  margin: 0 !important;
-  cursor: pointer;
-  user-select: none;
-}
-.form-check label {
-  font-size: 18px;
-  margin-right: 10px;
-  font-weight: 500;
-  cursor: pointer;
-  user-select: none;
-}
 .logo a{
-  font-size: 25px;
+  font-size: 20px;
+  letter-spacing: 2px;
   font-weight: 600;
   text-decoration: none;
   color: var(--color-texts);
@@ -91,7 +67,7 @@ nav {
 }
 .menu li{
   color: var(--color-texts);
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 500;
   transition: 0.5s;
   padding: 0 10px;
@@ -99,14 +75,7 @@ nav {
   align-items: center;
   flex-direction: row-reverse;
 }
-.menuMobile {
-  display: none;
-  width: auto;
-  height: auto;
-  margin-right: 20px;
-  margin-top: 12px;
-  margin-bottom: 8px;
-}
+
 .bar {
   width: 100%;
   height: 2px;
@@ -137,52 +106,61 @@ nav {
   opacity: 1;
   background: var(--orange-color);
 }
-.modalMenu {
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(255, 255, 255);
-  position: fixed !important;
-  display: none;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  z-index: 400;
-}
 
-.modalMenu a{
-  text-decoration: none;
-}
-.modalMenu ul{
-  list-style: none;
-  margin: 0 !important;
+/* BUTTON DARKMODE */
+.form-check {
+  display: flex !important;
   padding: 0 !important;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100%;
+  background-color: rgb(red, green, blue, 0);
+  font-family: var(--font-family) !important;
+  margin: 0 !important;
+  grid-column: 3/4;
+  grid-area: darkmode;
 }
-.modalMenu li{
-  list-style: none;
-  margin: 15px;
-  padding: 0 10px;
-  font-size: 23px;
-  color: var(--color-texts);
-  border-bottom: 1px solid #ffa60081;
-  transition: 0.5s;
-}
-.modalMenu li:hover{
-  transform: scale(1.1);
-  border-bottom: 1px solid #ffa600e8;
-}
-.fechar{
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  color: var(--color-texts);
-  font-size: 25px;
-  font-weight: 400;
-  background-color: white;
-  outline: 0 !important;
+.form-check label {
+  font-size: 1em;
+  padding-right: 6px;
+  font-weight: 500;
+  cursor: pointer;
+  user-select: none;
+  color: var(--darkmode-toggle-system);
+} 
+#darkSwitch {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-tap-highlight-color: transparent;
   cursor: pointer;
 }
-.mostrarMenu{
-  display: flex !important;
+.toggle {
+  height: 21px;
+  width: 38px;
+  border-radius: 16px;
+  display: inline-block;
+  position: relative;
+  margin: 0;
+  border: 1px solid var(--darkmode-toggle-system);
+  background-color: var(--softdark-background-color);
+  transition: all 0.2s ease;
+}
+.toggle:after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: var(--darkmode-toggle-system);;
+  /* box-shadow: 0 1px 2px rgb(44 44 44 / 20%); */
+  transition: all 0.2s cubic-bezier(0.5, 0.1, 0.75, 1.35);
+}
+.toggle:checked {
+  border-color: var(--darkmode-toggle-system);
+}
+.toggle:checked:after{
+  transform: translatex(16px)
 }
