Concluding the home project

--- a/assets/css/styleHome.css
+++ b/assets/css/styleHome.css
@@ -155,7 +155,11 @@ p {
     border: 1px solid var(--orange-color) !important;
     background-color: var(--filtrar-button-on-hover) !important;
 }
-
+.button-dropdown:focus {
+    box-shadow: 0 0 0 3px rgba(255, 124, 31, .3);
+    -webkit-box-shadow:  0 0 0 3px rgba(255, 124, 31, .3);
+    -moz-box-shadow:  0 0 0 3px rgba(255, 124, 31, .3);
+}
 .filter-button:hover {
     background-color: var(--color-texts);
     color: var(--color-texts-on-hover);
@@ -171,6 +175,7 @@ p {
 }
 .dropdown-item-title{
     font-weight: 500 !important;
+    margin-top: 10px;
 }
 .dropdown-line{
     width: 100%;
@@ -183,6 +188,8 @@ p {
     cursor: pointer;
     user-select: none;
     transition: .2s;
+    display: flex;
+    align-items: center;
 }
 .dropdown-menu label:hover {
     background-color: var(--label-filter-bgcolor);
@@ -195,6 +202,124 @@ p {
 .dropdown-line-item input{
     cursor: pointer;
 }
+/* DROPDOWN BUTTON */
+
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+    .dropdown-checkbox {
+        --active: var(--orange-color);
+        --active-inner: #fff;
+        --focus: 2px rgba(255, 124, 31, .3);
+        --border: var(--color-texts);
+        --border-hover: var(--orange-color);
+        --background: #fff;
+        --disabled: #f6f8ff;
+        --disabled-inner: #e1e6f9;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        height: 21px;
+        outline: none;
+        display: inline-block;
+        vertical-align: top;
+        position: relative;
+        margin: 0;
+        cursor: pointer;
+        border: 1px solid var(--bc, var(--border));
+        background: var(--b, var(--background));
+        transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+   }
+    .dropdown-checkbox:after {
+        content: '';
+        display: block;
+        left: 0;
+        top: 0;
+        position: absolute;
+        transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+   }
+    .dropdown-checkbox:checked {
+        --b: var(--active);
+        --bc: var(--active);
+        --d-o: 0.3s;
+        --d-t: 0.6s;
+        --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
+   }
+    .dropdown-checkbox:disabled {
+        --b: var(--disabled);
+        cursor: not-allowed;
+        opacity: 0.9;
+   }
+    .dropdown-checkbox:disabled:checked {
+        --b: var(--disabled-inner);
+        --bc: var(--border);
+   }
+    .dropdown-checkbox:disabled + label {
+        cursor: not-allowed;
+   }
+    .dropdown-checkbox:hover:not(:checked):not(:disabled) {
+        --bc: var(--border-hover);
+   }
+    .dropdown-checkbox:focus {
+        box-shadow: 0 0 0 var(--focus);
+        -webkit-box-shadow:  0 0 0 var(--focus);
+        -moz-box-shadow:  0 0 0 var(--focus);
+   }
+    .dropdown-checkbox:not(.switch) {
+        height: 18px;
+        width: 18px;
+   }
+    .dropdown-checkbox:not(.switch):after {
+        opacity: var(--o, 0);
+   }
+    .dropdown-checkbox:not(.switch):checked {
+        --o: 1;
+   }
+    .dropdown-checkbox + label {
+        font-size: 14px;
+        line-height: 21px;
+        display: inline-block;
+        vertical-align: top;
+        cursor: pointer;
+        margin-left: 4px;
+   }
+    .dropdown-checkbox:not(.switch) {
+        border-radius: 7px;
+   }
+    .dropdown-checkbox:not(.switch):after {
+        width: 6px;
+        height: 9px;
+        border: 2px solid var(--active-inner);
+        border-top: 0;
+        border-left: 0;
+        left: 5px;
+        top: 2px;
+        -webkit-transform: rotate(var(--r, 20deg));
+        transform: rotate(var(--r, 20deg));
+   }
+    .dropdown-checkbox:not(.switch):checked {
+        --r: 43deg;
+   }
+    .dropdown-checkbox.switch {
+        width: 38px;
+        border-radius: 11px;
+   }
+    .dropdown-checkbox.switch:after {
+        left: 2px;
+        top: 2px;
+        border-radius: 50%;
+        width: 15px;
+        height: 15px;
+        background: var(--ab, var(--border));
+        transform: translateX(var(--x, 0));
+   }
+    .dropdown-checkbox.switch:checked {
+        --ab: var(--active-inner);
+        --x: 17px;
+   }
+    .dropdown-checkbox.switch:disabled:not(:checked):after {
+        opacity: 0.6;
+   }
+}
+
+
 .limparButton {
     width: min-content;
     height: 100%;
@@ -320,7 +445,7 @@ p {
 }
 .see-more-link {
     margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 1px;
 }
 .see-more:hover {
     background: var(--color-texts);
@@ -617,3 +742,12 @@ body::-webkit-scrollbar-thumb {
         width: 25px;
     }
 }
+
+
+
+
+
+
+
+
+
