--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -3,45 +3,54 @@ body {
   padding: 0;
 }
 .loader-wrapper {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #1c1c1c8a;
+  background-color: rgb(18, 18, 18, 0.7);
   display:flex;
   justify-content: center;
   align-items: center;
-  z-index: 99999;
+  z-index: 999999;
+}.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 7em;
+  height: 7em;
 }
 .loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
+  margin: 60px auto;
+  font-size: 10px;
   position: relative;
-  border: 4px solid #Fff;
-  animation: loader 2s infinite ease;
+  text-indent: -9999em;
+  border-top: 0.8em solid rgba(255, 255, 255, 0.2);
+  border-right: 0.8em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 0.8em solid rgba(255, 255, 255, 0.2);
+  border-left: 0.8em solid var(--orange-color);
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
 }
-.loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in;
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
-
-@keyframes loader {
-  0% { transform: rotate(0deg);}
-  25% { transform: rotate(180deg);}
-  50% { transform: rotate(180deg);}
-  75% { transform: rotate(360deg);}
-  100% { transform: rotate(360deg);}
-}
-
-@keyframes loader-inner {
-  0% { height: 0%;}
-  25% { height: 0%;}
-  50% { height: 100%;}
-  75% { height: 100%;}
-  100% { height: 0%;}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
